update index and create and import css

--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
 <html>
     <head>
         <title>Honzicek</title>
+
+        <link rel="stylesheet" href="css/main.css">
     </head>
+
+    <body>
+        <h1>FOKIN WELKOM</h1>
+    </body>
 </html>
