--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <h1>FOKIN WELKOM</h1>
+        <img src="https://ps.w.org/easy-under-construction/assets/banner-772x250.png?rev=2417171" />
     </body>
 </html>
