--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <img src="https://ps.w.org/easy-under-construction/assets/banner-772x250.png?rev=2417171" />
+        <div id="construction"><img src="https://ps.w.org/easy-under-construction/assets/banner-772x250.png?rev=2417171" /></div>
     </body>
 </html>
